<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".help.HelpFrag"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent=".33" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".25" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:src="@drawable/ic_wholebookclosed"
        app:layout_constraintBottom_toTopOf="@+id/guideline5"
        app:layout_constraintEnd_toStartOf="@+id/guideline4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/closed_book_description" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:weightSum="3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4">

        <RadioButton
            android:id="@+id/how_to_use_selector"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/custom_button"
            android:button="@drawable/custom_button"
            android:checked="true"
            android:gravity="center"
            android:text="@string/how_to_use"
            android:textColor="?textSecondary"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/voice_commands_selector"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/custom_button"
            android:button="@drawable/custom_button"
            android:checked="false"
            android:gravity="center"
            android:text="@string/voice_commands"
            android:textColor="?textSecondary"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/appearance_selector"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/custom_button"
            android:button="@drawable/custom_button"
            android:checked="false"
            android:gravity="center"
            android:text="@string/appearance"
            android:textColor="?textSecondary"
            android:textStyle="bold" />
    </RadioGroup>

    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/selected_border"
                android:paddingTop="16dp"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:paddingBottom="8dp"
                android:text="@string/how_to_use_this_app"
                android:textAlignment="center"
                android:textColor="?textSecondary"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/how_to_use_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="8dp"
                android:paddingTop="8dp"
                android:paddingEnd="8dp"
                android:text="@string/how_to_use_explanation"
                android:textColor="?textPrimary" />

            <TextView
                android:id="@+id/appearance_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="8dp"
                android:paddingTop="8dp"
                android:paddingEnd="8dp"
                android:text="@string/appearance_explanation"
                android:textColor="?textPrimary"
                android:visibility="gone" />

            <TextView
                android:id="@+id/voice_commands_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="8dp"
                android:paddingTop="8dp"
                android:paddingEnd="8dp"
                android:text="@string/voice_commands_explanation"
                android:textColor="?textPrimary"
                android:visibility="gone" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>